Fixing SONAR warnings and removing unused dependency